--- a/css/style2.css
+++ b/css/style2.css
@@ -1,7 +1,3 @@
-html, body {
-  height: 100%;
-  width: 100%;
-}
 .mdl-layout__header-row {
   align-items: center;
   justify-content: center;
@@ -19,7 +15,7 @@ html, body {
 }
 
 body {
-  background-color: blue;
+  background-color: green;
 }
 
 p {
