--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
+
 .mdl-layout__header-row {
   align-items: center;
   justify-content: center;
@@ -20,7 +16,7 @@ body {
 }
 
 body {
-  background-color: blue;
+  background-color: blueviolet;
 }
 
 p {
